# lede

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RETROSPECTIVE.md  complexity.md  dups.md  output.md
.metrics/: 20260509-1603-complexity.md  20260509-1745-complexity.md
docs/superpowers/plans/: 2026-05-07-c-language-support-implementation-plan.md  2026-05-07-cognitive-load-implementation-plan.md  2026-05-07-complexity-reduction.md  2026-05-07-rubik-implementation-plan.md  2026-05-08-language-config-refactor.md  2026-05-09-metric-profile-groupings.md  2026-05-09-refactor-accumulator-loops.md  2026-05-09-typescript-support-implementation-plan.md
docs/superpowers/specs/: 2026-05-07-c-language-support-design.md  2026-05-07-cognitive-load-design.md  2026-05-07-rubik-design.md  2026-05-08-language-config-refactor-design.md  2026-05-09-metric-profile-groupings-design.md  2026-05-09-refactor-accumulator-loops-design.md  2026-05-09-typescript-support-design.md
src/: analyzer.rs  cognitive.rs  complexity.rs  duplicates.rs  lib.rs  main.rs
src/language/: c.rs  javascript.rs  javascript_like.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/output/: json.rs  markdown.rs  mod.rs  pretty.rs
tests/: integration_test.rs
tests/fixtures/: c_sample.c  invalid.py  js_sample.js  python_sample.py  rust_sample.rs  typescript_sample.ts
tests/fixtures/duplicates/: file_a.rs
